--- a/index.html
+++ b/index.html
@@ -46,5 +46,24 @@
             </div>
         </div>
     </section>
+
+
+    <section class="option-bar">
+        <div class="optionbar-content">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">MENU</a></li>
+            <li><a href="#">PAGES</a></li>
+            <li><a href="#">GALLARY</a></li>
+            <li><a href="#">NEWS</a></li>
+        </div>
+        <div class="optionbar-content">
+            <img src="images/cart.png" alt="">
+            <span>(4)</span>
+        </div>
+    </section>
+
+
+    
 </body>
 </html>
