section one added

--- a/index.html
+++ b/index.html
@@ -64,6 +64,25 @@
     </section>
 
 
+    <section class="section-one">
+        <div class="sectionone-content">
+            <h1>
+                <span class="orange">Holiday! </span> or Cheat Day!
+            </h1>
+            <h1>
+                Enjoy and Taste
+            </h1>
+            <h1>With Food Buff</h1>
+            <p class="para">We care for your health. We believe in Quality and Healty ingredient. Enjoy your meal with Food Buff!</p>
+            <a class="btn" target="_blank" href="https://dribbble.com/shots/784549/attachments/784549-Order-Successful?mode=media">Order Food</a>
+        </div>
+        <div class="sectionone-content">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
+
+
     
 </body>
 </html>
