section two about us added

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
 
 
 
-    
+    <section class="section-two">
+        <div class="sectiontwo-content">
+            <img src="images/female/6667872_preview-removebg-preview.png" alt="">
+        </div>
+        <div class="sectiontwo-content">
+            <h1>About Us</h1>
+            <p class="para">We are a team of people, working for your satisfaction. All of us have nutrition training from several reknowned university. You can unoubtly take our food. We care about your needs. You can modify your meal as per your choice. Have a good day!</p>
+            <a class="btn" target="_blank" href="https://www.google.com/maps/place/Dhaka/@23.7805729,90.2788941,11z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.810332!4d90.4125181?hl=en">Contact Us</a>
+        </div>
+    </section>
 </body>
 </html>
