card section added

--- a/index.html
+++ b/index.html
@@ -88,10 +88,37 @@
             <img src="images/female/6667872_preview-removebg-preview.png" alt="">
         </div>
         <div class="sectiontwo-content">
-            <h1>About Us</h1>
+            <h2>About Us</h2>
             <p class="para">We are a team of people, working for your satisfaction. All of us have nutrition training from several reknowned university. You can unoubtly take our food. We care about your needs. You can modify your meal as per your choice. Have a good day!</p>
             <a class="btn" target="_blank" href="https://www.google.com/maps/place/Dhaka/@23.7805729,90.2788941,11z/data=!3m1!4b1!4m5!3m4!1s0x3755b8b087026b81:0x8fa563bbdd5904c2!8m2!3d23.810332!4d90.4125181?hl=en">Contact Us</a>
         </div>
     </section>
+
+
+
+    <section class="section-three">
+        <div class="content-one">
+            <h2>Our Recipies</h2>
+            <p>We are offering lots of delicious dishes. Currently lots of lucrative offers are running. Go and grab your meal. Offers are limited.</p>
+        </div>
+        <div class="content-two">
+            <div class="items">
+                <img src="images/food/Project Cover.png" alt="">
+                <h4>Mama Halim</h4>
+                <p>One of the most tasty halim inside Dhaka. We're well known for our halim. We've used 100% quality food grade ingradients. We've used mutton in our halim.</p>
+            </div>
+            <div class="items">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h4>Fish Cutlet</h4>
+                <p>Tuna is one of the most famous sea fish in terms of taste and size. Our experinced cheff discovered best combination of masala to ensure top notch taste of tuna fish cutlet.</p>
+            </div>
+            <div class="items">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h4>Special Kabab</h4>
+                <p>This kabab is special item of our restaurant. We've got huge five star reviews for our special kabab. Hope you will get your most mamorable taste.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
