--- a/index.html
+++ b/index.html
@@ -145,5 +145,24 @@
         </div>
     </section>
 
+
+
+
+    <section class="section-like">
+        <div class="like-element">
+            <h2>
+                700k
+            </h2>
+            <p>Youtube Subscriber</p>
+        </div>
+        <div class="like-element">
+            <h2>2.4m</h2>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="like-element">
+            <h2>4.5m</h2>
+            <p>Facebook Like</p>
+        </div>
+    </section>
 </body>
 </html>
