comment in both css and html added and footer added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+    <!--The topbar section contains a logo with company name and the address with opening closing time-->
 
     <section class="top-bar">
         <div class="topbar-first">
@@ -47,6 +48,7 @@
         </div>
     </section>
 
+    <!--option bar has menu, home, walpaper and so on with a cart logo-->
 
     <section class="option-bar">
         <div class="optionbar-content">
@@ -63,6 +65,7 @@
         </div>
     </section>
 
+    <!--First section contains photo and welcome message and order button-->
 
     <section class="section-one">
         <div class="sectionone-content">
@@ -81,7 +84,7 @@
         </div>
     </section>
 
-
+    <!--In this section the About us section and a pic added with contact us button-->
 
     <section class="section-two">
         <div class="sectiontwo-content">
@@ -94,7 +97,7 @@
         </div>
     </section>
 
-
+    <!--This section shows foord cards as reciepe-->
 
     <section class="section-three">
         <div class="content-one">
@@ -120,7 +123,7 @@
         </div>
     </section>
 
-
+    <!--Feedback taking section has input fields and button with a food pic-->
 
 
     <section class="feedback-section">
@@ -146,7 +149,7 @@
     </section>
 
 
-
+    <!--Like section describes the social media impact-->
 
     <section class="section-like">
         <div class="like-element">
@@ -164,5 +167,13 @@
             <p>Facebook Like</p>
         </div>
     </section>
+
+
+    <!--Footer section contains the company name-->
+
+    <footer class="footer"> 
+        <h2 class="footer-content"><span class="orange">FOOD</span> <span class="gray">BUFF</span></h2>
+        <p class="footer-content">Eat healthy to live healthy. Live healthy to live happy</p>
+    </footer>
 </body>
 </html>
