--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Otomanopee+One&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="images/plate2.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
